force-app/main/default/objects/Tax_Configuration__c/Tax_Configuration__c.object-meta.xml
<CustomObject>
    <label>Tax Configuration</label>
    <pluralLabel>Tax Configurations</pluralLabel>
    <nameField>
        <label>Tax Configuration Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tax rules and rate configurations for GST, VAT, and Sales Tax compliance (MOD-01 Master Data Management)</description>
</CustomObject>