force-app/main/default/objects/Tax_Configuration__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <type>Date</type>
    <required>true</required>
</CustomField>