force-app/main/default/objects/Tax_Configuration__c/fields/IGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate__c</fullName>
    <label>IGST Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>