force-app/main/default/objects/Tax_Configuration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tax Configurations</relationshipLabel>
    <relationshipName>Tax_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>