force-app/main/default/objects/Tax_Configuration__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Tax Configurations</relationshipLabel>
    <relationshipName>Tax_Configurations_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>