force-app/main/default/objects/Tax_Configuration__c/fields/SGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>SGST_Rate__c</fullName>
    <label>SGST Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>